# WebScrapingProjects

./: .gitignore  README.md  adamchoi.py  audibleWithselenium.py  bhphotovideo.py  books.csv  demo.py  main.py  news.py  parse.py  pyproject.toml  requirements.txt  scrape.py  scrape_this_site.py  test.py  yCombinator.py
AIscraper/: main.py  parse.py  scrape.py
CodeWitharry/: Ultimate Web Scraping tutorial by CodeWitharry.txt
WebScrapingtoCSV/: WebScrapingtoCSV.ipynb
playwrite/: youtube_scraper.py
playwrite/bhphotovideo/: async.py  bhphoto.py  sync.py
playwrite/mix/: scrape.py
playwrite/thomas_jansenYTchannel/: scraping_indeed.py  scraping_with_agentql.py  test.py
scrapers/: india_population.csv  main.py  pyproject.toml  requirements.txt
scrapers/notebooks/: list_of_US_companies_scraper.ipynb
scrapers/scraper/: title.py
